feat : added routes and override component library css

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link rel="stylesheet" href="https://rocket-ui-library.netlify.app/stylesheets/components.css">
+  <link rel="stylesheet" href="https://rocket-ui-library.netlify.app/landing.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
   <title>PureFitness</title>
 </head>
 
